--- a/cldf/requirements.txt
+++ b/cldf/requirements.txt
@@ -1,51 +1,70 @@
-appdirs==1.4.3
+appdirs==1.4.4
+arrow==1.2.3
+Babel==2.11.0
 bs4==0.0.1
-certifi==2019.11.28
-chardet==3.0.4
-cldfbench==1.9.0
-cldfcatalog==1.3.2
-clldutils==3.10.0
-colorama==0.4.3
-colorlog==5.0.1
-csvw==1.11.0
-ete3==3.1.2
-gitdb==4.0.7
-greenlet==1.1.0
-html5lib==1.0.1
-idna==2.8
-iniconfig==1.1.1
-isodate==0.6.0
-Markdown==3.3.4
-newick==1.3.1
-numpy==1.21.1
-openpyxl==3.0.7
-packaging==20.3
--e git+https://github.com/phlorest/phlorest@4bbe029ff073fd2083406b87084a7728ec696a75#egg=phlorest
-pkg_resources==0.0.0
-pluggy==0.13.1
+certifi==2022.12.7
+cffi==1.15.1
+chardet==5.1.0
+cldfbench==1.13.0
+-e git+https://github.com/phlorest/atkinson2006.git@a75ad63ee1198c72e8402d427bc6f57e6d193f03#egg=cldfbench_atkinson2006
+cldfcatalog==1.5.1
+cldfviz==0.10.0
+cldfzenodo==1.1.0
+clldutils==3.19.0
+colorama==0.4.6
+colorlog==6.7.0
+-e git+https://github.com/dlce-eva/commonnexus@cf2137dbbe7885b715e39a0d1ae4b1be48161d99#egg=commonnexus
+csvw==3.1.3
+cycler==0.11.0
+exceptiongroup==1.1.0
+gitdb==4.0.10
+greenlet==2.0.1
+html5lib==1.1
+idna==3.4
+iniconfig==2.0.0
+isodate==0.6.1
+Jinja2==3.1.2
+jmespath==1.0.1
+jsonschema==4.17.3
+kiwisolver==1.4.4
+lxml==4.9.2
+Markdown==3.4.1
+MarkupSafe==2.1.2
+matplotlib==3.6.3
+multipledispatch==0.6.0
+nameparser==1.1.2
+-e git+https://github.com/dlce-eva/python-newick@a8e4049737ac1f5d45b3736e98e872bc5edd004f#egg=newick
+numpy==1.24.1
+packaging==23.0
+-e git+https://github.com/phlorest/phlorest@ecea721c8f2ad598c6fa7e2a6c089dd113d59601#egg=phlorest
+pluggy==1.0.0
 purl==1.6
-py==1.10.0
 pybtex==0.24.0
-pycldf==1.22.0
-pyconcepticon==2.8.0
-pycountry==20.7.3
--e git+https://github.com/d-place/pydplace@9a94a80bccd7e9d87f0aa50d40252e95fbba2a2c#egg=pydplace
-pyglottolog==3.6.0
-PyQt5==5.15.5
-pytest==6.2.4
+pycldf==1.34.1
+pycountry==22.3.5
+pyglottolog==3.11.0
+pylatexenc==2.10
+pyparsing==3.0.9
+pyrsistent==0.19.3
+pytest==7.2.1
 python-dateutil==2.8.2
-python-nexus==2.4.1
-requests==2.22.0
+python-frontmatter==1.0.0
+pytz==2022.7.1
+rdflib==6.2.0
+reportlab==3.6.12
+requests==2.28.2
 rfc3986==1.5.0
-six==1.14.0
-smmap==4.0.0
-soupsieve==2.2.1
-SQLAlchemy==1.4.27
-tabulate==0.8.9
-termcolor==1.1.0
-tqdm==4.62.3
-uritemplate==3.0.1
-urllib3==1.25.8
+six==1.16.0
+smmap==5.0.0
+soupsieve==2.3.2.post1
+SQLAlchemy==1.4.46
+tabulate==0.9.0
+termcolor==2.2.0
+toyplot==1.0.3
+toytree==2.0.1
+tqdm==4.64.1
+uritemplate==4.1.1
+urllib3==1.26.14
 webencodings==0.5.1
-xlrd==2.0.1
-zenodoclient==0.4.1
+yattag==1.15.0
+zenodoclient==0.5.0
